--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -5,37 +5,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="../../stylesheets/myprofile.css" rel="stylesheet">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+body,h1,h2,h3,h4,h5 {font-family: Normal}
 .w3-quarter img{margin-bottom: -6px; cursor: pointer}
 .w3-quarter img:hover{opacity: 0.6; transition: 0.3s}
 </style>
 <body class="w3-light-grey">
 
-<!-- Sidenav/menu -->
-<nav class="w3-sidenav w3-black w3-animate-right w3-center w3-top w3-text-light-grey w3-large" style="z-index:3;width:250px;font-weight:bold;display:none;right:0;" id="mySidenav">
-  <a href="javascript:void()" onclick="w3_close()" class="w3-padding-32">CLOSE</a> 
-  <a href="#" onclick="w3_close()" class="w3-padding-16">PORTFOLIO</a> 
-  <a href="#about" onclick="w3_close()" class="w3-padding-16">ABOUT ME</a> 
-  <a href="#contact" onclick="w3_close()" class="w3-padding-16">CONTACT</a>
-</nav>
-
-<!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
-
-  <span class="w3-left w3-padding">Deep's Dank Food</span>
-
-  <span class="w3-left w3-padding">{{ name }}</span>
-
-  <a href="javascript:void(0)" class="w3-right w3-btn w3-white" onclick="w3_open()">☰</a>
-</header>
-
 <!-- Overlay effect when opening sidenav on small screens -->
 <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main w3-content" style="max-width:1600px;margin-top:83px">
-  
+<!-- !Page content! -->
+<div class="w3-main w3-content" style="max-width:1600px;margin-top:-10px";>
+  <div class="inner">
+    <div class="masthead clearfix">
+      <h3 class="masthead-brand">fudo</h3>
+      <nav class="nav nav-masthead">
+        <!--<a class="nav-link active" href="#">Home</a>-->
+        <a class="nav-link" href="/newsfeed">Discover</a>
+        <a class="nav-link" href="/myprofile">My Profile</a>
+        <a class="nav-link" href="/logout">Logout</a>
+      </nav>
+    </div>
+  </div>
+  <div id="about" style="margin-bottom: -80px;">
+        <ul id="top-social">
+          <li><a href="#" class="facebook">Facebook</a></li>
+            <li><a href="#" class="twitter">Twitter</a></li>
+            <li><a href="#" class="linkedin">LinkedIn</a></li>
+        </ul>
+      <div class="content">
+          <img id="profilepic" src="../images/eggs.jpg" />
+            <h2>{{ name }}</h2>
+            <p>{{ about }}</p> 
+            <p>Mail: {{ email }}</p>
+            <p>Tel: {{ phone }}</p>
+            <ul id="service-icons">
+              <li class="services-design">Design</li>
+                <li class="services-mobile">Mobile</li>
+                <li class="services-film">Film</li>
+                <li class="services-photo">Photo</li>
+            </ul>
+      </div>
+  </div>
   <!-- Photo grid -->
   <div class="w3-row w3-grayscale-min">
     <div class="w3-quarter">
@@ -83,70 +95,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
-  <!-- About section -->
-  <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
-    <h4><b>About</b></h4>
-    <img src="../images/deep.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
-    <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>{{ name }}</h4>
-      <p> {{ about }}
-      </p>
-      <p>mail: {{ email }}</p>
-      <p>tel: {{ phone }}</p>
-      <hr class="w3-opacity">
-      <h4 class="w3-padding-16">Reviews of Restaurant</h4>
-      <p class="w3-wide">Quality</p>
-      <div class="w3-progress-container">
-        <div class="w3-progressbar" style="width:95%"></div>
-      </div>
-      <p class="w3-wide">Cleanliness</p>
-      <div class="w3-progress-container">
-        <div class="w3-progressbar" style="width:85%"></div>
-      </div>
-      <p class="w3-wide">Location</p>
-      <div class="w3-progress-container">
-        <div class="w3-progressbar" style="width:80%"></div>
-      </div>
-      <p><button class="w3-btn w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom w3-hover-black">View Recipe</button></p>
-      <hr class="w3-opacity">
-
-      <h4 class="w3-padding-16">Popular Menu Items (?idk?) </h4>
-      <div class="w3-row-padding" style="margin:0 -16px">
-        <div class="w3-half w3-margin-bottom">
-          <ul class="w3-ul w3-white w3-center">
-            <li class="w3-black w3-xlarge w3-padding-32">Food</li>
-            <li class="w3-padding-16">Dank Pancakes</li>
-            <li class="w3-padding-16">Dank Rice</li>
-            <li class="w3-padding-16">Dank Jello</li>
-            <li class="w3-padding-16">Dank Eggs</li>
-            <li class="w3-padding-16">
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button class="w3-btn w3-white w3-padding-large w3-hover-black">View More</button>
-            </li>
-          </ul>
-        </div>
-        
-        <div class="w3-half">
-          <ul class="w3-ul w3-white w3-center">
-            <li class="w3-black w3-xlarge w3-padding-32">Drinks</li>
-            <li class="w3-padding-16">Dank Orange Juice</li>
-            <li class="w3-padding-16">Dank Apple Juice</li>
-            <li class="w3-padding-16">Dank Milk</li>
-            <li class="w3-padding-16">Dank Wine</li>
-            <li class="w3-padding-16">
-            </li>
-            <li class="w3-light-grey w3-padding-24">
-              <button class="w3-btn w3-white w3-padding-large w3-hover-black">View More</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 <!-- End page content -->
 </div>
-
 <script>
 // Script to open and close sidenav
 function w3_open() {
