--- a/fudo/public/stylesheets/login.css
+++ b/fudo/public/stylesheets/login.css
@@ -72,22 +72,22 @@ Here are the real colors for the buttons
 .btn-primary { 
   font: normal;
   font-family: normal;
-  background-color: #4a77d4; 
-  background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); 
-  background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); 
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4));
-  background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); 
-  background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); 
-  background-image: linear-gradient(top, #6eb6de, #4a77d4); 
+  background-color: #000033; 
+  background-image: -moz-linear-gradient(top, #fff, #000033); 
+  background-image: -ms-linear-gradient(top, #fff, #000033); 
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000033), to(#4a77d4));
+  background-image: -webkit-linear-gradient(top, #fff, #000033); 
+  background-image: -o-linear-gradient(top, #fff, #000033); 
+  background-image: linear-gradient(top, #fff, #000033); 
   background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  
-  border: 1px solid #3762bc; 
+  border: 1px solid transparent; 
   text-shadow: 1px 1px 1px rgba(0,0,0,0.4); 
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); 
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { 
   filter: none; 
-  background-color: #4a77d4; 
+  background-color: #000033; 
 }
 .btn-block { 
   width: 100%; 
