--- a/fudo/public/stylesheets/register.css
+++ b/fudo/public/stylesheets/register.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
 .btn { 
   display: inline-block;
   *display: inline;
@@ -98,8 +96,8 @@ Here are the real colors for the buttons
 
 html{ 
   width: 100%; 
-  height:100%; 
-  overflow:hidden; }
+  height:100%;  
+}
 
 
 body { 
@@ -114,20 +112,14 @@ body {
 }
 
 .login { 
-  position: absolute;
-  font: normal;
-  font-family: normal;
-  top: 50%;
-  left: 50%;
-  margin: -150px 0 0 -150px;
-  width:300px;
-  height:300px;
+  position: relative;
 }
 .login h1 { 
   color: #fff; 
   text-shadow: 0 0 10px rgba(0,0,0,0.3); 
   letter-spacing:1px; 
-  text-align:center; 
+  text-align:center;
+  top: 20%; 
   font: normal;
   font-family: normal;
   font-size: 50pt;
@@ -139,16 +131,19 @@ body {
 
 .masthead {
   margin-bottom: 2rem;
+  font-style: normal;
 }
 
 .masthead-brand {
   margin-bottom: 2rem;
+  font-style: normal;
   font-size: 25pt;
 }
 
 .nav-masthead .nav-link {
   padding: .25rem;
   font-weight: bold;
+  font-style: normal;
   font-size: 15pt;
   color: rgba(255,255,255,.5);
   background-color: transparent;
@@ -169,7 +164,7 @@ body {
   border-bottom-color: #fff;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 5em) {
   .masthead-brand {
     float: left;
   }
@@ -207,23 +202,12 @@ input {
 
 /* Progress Bar CSS */
 
-/*custom font*/
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
 
 /*basic reset*/
 * {margin: 0; padding: 0;}
 
-html {
-  height: 100%;
-  /*Image only BG fallback*/
-  
-  /*background = gradient + image pattern combo*/
-  background: 
-    linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
-}
-
 body {
-  font-family: montserrat, arial, verdana;
+  font-family: normal;
 }
 /*form styles*/
 #msform {
@@ -231,6 +215,7 @@ body {
   margin: 50px auto;
   text-align: center;
   position: relative;
+  height:440px;
 }
 #msform fieldset {
   background: white;
@@ -241,16 +226,17 @@ body {
   box-sizing: border-box;
   width: 80%;
   margin: 0 10%;
-  
   /*stacking fieldsets above each other*/
   position: relative;
 }
+
 /*Hide all except first fieldset*/
 #msform fieldset:not(:first-of-type) {
   display: none;
 }
 /*inputs*/
-#msform input, #msform textarea {
+#msform input,
+#msform textarea {
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -261,10 +247,11 @@ body {
   color: #2C3E50;
   font-size: 13px;
 }
+
 /*buttons*/
 #msform .action-button {
   width: 100px;
-  background: #27AE60;
+  background: #000033;
   font-weight: bold;
   color: white;
   border: 0 none;
@@ -273,9 +260,13 @@ body {
   padding: 10px 5px;
   margin: 10px 5px;
 }
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+
+#msform .action-button:hover,
+#msform .action-button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #000033;
 }
+
+
 /*headings*/
 .fs-title {
   font-size: 15px;
@@ -283,12 +274,14 @@ body {
   color: #2C3E50;
   margin-bottom: 10px;
 }
+
 .fs-subtitle {
   font-weight: normal;
   font-size: 13px;
   color: #666;
   margin-bottom: 20px;
 }
+
 /*progressbar*/
 #progressbar {
   margin-bottom: 30px;
@@ -296,6 +289,7 @@ body {
   /*CSS counters to number the steps*/
   counter-reset: step;
 }
+
 #progressbar li {
   list-style-type: none;
   color: white;
@@ -305,6 +299,7 @@ body {
   float: left;
   position: relative;
 }
+
 #progressbar li:before {
   content: counter(step);
   counter-increment: step;
@@ -317,6 +312,7 @@ body {
   border-radius: 3px;
   margin: 0 auto 5px auto;
 }
+
 /*progressbar connectors*/
 #progressbar li:after {
   content: '';
@@ -326,16 +322,18 @@ body {
   position: absolute;
   left: -50%;
   top: 9px;
-  z-index: -1; /*put it behind the numbers*/
+  z-index: -1;
+  /*put it behind the numbers*/
 }
 #progressbar li:first-child:after {
   /*connector not needed before the first step*/
-  content: none; 
+  content: none;
 }
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
-#progressbar li.active:before,  #progressbar li.active:after{
-  background: #27AE60;
+#progressbar li.active:before,
+#progressbar li.active:after {
+  background: #000033;
   color: white;
 }
 
