--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -7,27 +7,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link href="../../stylesheets/register.css" rel="stylesheet">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="../public/js/ajax.js"></script>
-  <script src="../public/js/register.js"></script>
-
 </head>
 
 <body>
   {{> navbar-new }}
   <div class="login">
-
-  <!-- multistep form -->
-  <!-- <form id="msform"> -->
-    <!-- progressbar -->
-<!--     <ul id="progressbar">
-      <li class="active">Account Setup</li>
-      <li>Social Profiles</li>
-      <li>Personal Details</li>
-    </ul>
- -->    <!-- fieldsets -->
-    <!-- <fieldset>
+    <h1>Sign Up</h1>
+  
+    <!-- multistep form -->
+    <form id="msform">
+      <!-- progressbar -->
+      <ul id="progressbar">
+        <li class="active">Account Setup</li>
+        <li>Social Profiles</li>
+        <li>Personal Details</li>
+      </ul>
+    <!-- fieldsets -->
+    <fieldset>
       <h2 class="fs-title">Create your account</h2>
       <h3 class="fs-subtitle">This is step 1</h3>
       <input type="text" name="email" placeholder="Email" />
@@ -54,9 +50,9 @@
       <input type="button" name="previous" class="previous action-button" value="Previous" />
       <input type="submit" name="submit" class="submit action-button" value="Submit" />
     </fieldset>
-  </form> -->
-  
-  <h1>Sign Up</h1>
+    </form>
+  </div>
+  <!---Original registration code 
     <form name="signup" method="post" action="/signup">
       <input type="text" name="name" placeholder="Name" required="required" />
       <input type="text" name="phone" placeholder="Phone Number" required="required" />
@@ -65,9 +61,18 @@
       <input type="password" name="password" placeholder="Password" required="required" />
       <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
     </form>
-  </div>
   
-    <script src="js/index.js"></script>
+  End of original registration code-->
+
+  <script src="js/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../../js/ajax.js"></script>
+  <!-- jQuery -->
+  <script src="http://thecodeplayer.com/uploads/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+  <!-- jQuery easing plugin -->
+  <script src="http://thecodeplayer.com/uploads/js/jquery.easing.min.js" type="text/javascript"></script>
+  <script src="../../js/register.js"></script>
 
 </body>
 </html>
