--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -44,7 +44,7 @@
       <h3 class="fs-subtitle">This is optional. You can always edit your description later.</h3>
       <textarea name="about" cols="40" rows="5"></textarea>
       <input type="button" name="previous" class="previous action-button" value="Previous" />
-      <button type="submit" class="submit action-button">Submit</button>
+      <button type="submit" class="submit action-button">Sign Up</button>
     </fieldset>
 <!--     <fieldset>
       <h2 class="fs-title">Personal Details</h2>
