--- a/fudo/views/partials/post.hbs
+++ b/fudo/views/partials/post.hbs
@@ -1,7 +1,8 @@
 <div class="post">
 	<img src="{{{imageURL}}}" width="300px">
+	<br>
 	<p class="title"> {{ postTitle }} </p>
-	<p class="rating"> Rating: 5 </p>
+	<!-- <p class="rating"> Rating: 5 </p> -->
 	<br>
 	<p class="author"> {{ postAuthor }} </p>
 </div>
