--- a/fudo/views/newsfeed.hbs
+++ b/fudo/views/newsfeed.hbs
@@ -10,6 +10,9 @@
     <link rel='stylesheet' href='/stylesheets/newsfeed.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
+    <script src="/js/upload.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
     {{> navbar }}
