--- a/fudo/views/partials/newsfeedview.hbs
+++ b/fudo/views/partials/newsfeedview.hbs
@@ -1,5 +1,11 @@
 <div class="newsfeed">
 
+  <div class="progress">
+    <div class="progress-bar" role="progressbar"></div>
+  </div>
+  <button id="upload-btn" class="btn btn-lg upload-btn" type="button">Upload File</button>
+  <input id="upload-input" type="file" name="uploads[]">
+
   {{#if isLoggedIn}}
   <form name="addpost" method="post" action="/addpost" class="addpost">
 
@@ -19,6 +25,12 @@
   {{#each posts}} 
     {{> post }}
   {{/each}}
+
+</div>
+
+<!-- <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="../public/js/upload.js"></script> -->
 
 <!--   <form name="adduser" method="post" action="/adduser">
     <ul>
