--- a/fudo/views/partials/newsfeedview.hbs
+++ b/fudo/views/partials/newsfeedview.hbs
@@ -6,14 +6,14 @@
       <div class="progress-bar" role="progressbar"></div>
     </div>
     <button id="upload-btn" class="btn btn-lg upload-btn" type="button">Upload File</button>
-    <input id="upload-input" type="file" name="uploads[]">
-    <input type="text" id="postImage" name="postImage">
+    <input id="upload-input" class="hidden" type="file" name="uploads[]">
+    <input type="text" id="postImage" class="hidden" name="postImage">
     <input type="text" id="postTitle" placeholder="Title" name="postTitle">
     <button type="submit">Post</button>
   </form>
   {{/if}}
 
-  {{#if isLoggedIn}}
+<!--   {{#if isLoggedIn}}
   <form name="addpost" method="post" action="/addpost" class="addpost">
 
     <ul>
@@ -21,14 +21,12 @@
       <li><input type="text" placeholder="Image URL" name="postImage"></li>
       <li>Post Title</li>
       <li><input type="text" placeholder="Title" name="postTitle"></li>
-      <!-- <li>Post Author</li>
-      <li><input type="text" placeholder="Author" name="postAuthor"></li> -->
       <li><button type="submit">Submit</button></li>
     </ul>
 
   </form>
   {{/if}}
-
+ -->
   {{#each posts}} 
     {{> post }}
   {{/each}}
